# sparam

./: .editorconfig  .gitignore  LICENSE  README.md
demo/: .gitignore  .mxproject  Makefile  arm-none-eabi-custom.lua  datatype.h  sparam_demo.ioc  stm32f1xx-rules.lua  xmake.lua
demo/Core/Src/: main.c  stm32f1xx_it.c
demo/src/: sparam_app.c  sparam_app.h
demo/stm32/: sparam_stm32.c
doc/: sparam-cli设计文档.md  sparam-gui设计文档.md  协议设计文档.md  总设计文档.md
doc/plans/: 2026-03-28-issue3-m3-dock-archive.md
firmware/: README.md  sparam.c  sparam.h  sparam_hal.h  sparam_port.h
firmware/stm32/: sparam_stm32.c
host/: README.md  cli.py  gui.py  pyproject.toml
host/gui/: __init__.py  main.py  main_window.py  mock_preview.py
host/gui/controllers/: __init__.py  connection_controller.py  io_controller.py
host/gui/styles/: catppuccin.py
host/gui/widgets/: log_panel.py  sidebar.py  toolbar.py  value_card.py  waveform_plot.py
host/sparam/: __init__.py  device.py  device_manager.py  elf_parser.py  monitor_state.py  monitor_store.py  protocol.py  serial_conn.py  socket_conn.py
host/tests/: test_connection_controller.py  test_gui_interactions.py  test_gui_layout.py  test_io_controller.py  test_monitor_state.py  test_monitor_store.py  test_protocol_edge_cases.py  test_protocol_registry.py  test_socket_simulation.py
